@@ -1,6 +1,9 @@
-@comment $NetBSD: PLIST,v 1.2 2003/09/16 11:40:26 recht Exp $
+@comment $NetBSD: PLIST,v 1.3 2004/01/02 01:19:14 hubertf Exp $
 bin/nicotine
 bin/nicotine-import-winconfig
+${PYSITELIB}/pynicotine/ConfigParser.py
+${PYSITELIB}/pynicotine/ConfigParser.pyc
+${PYSITELIB}/pynicotine/ConfigParser.pyo
 ${PYSITELIB}/pynicotine/__init__.py
 ${PYSITELIB}/pynicotine/__init__.pyc
 ${PYSITELIB}/pynicotine/__init__.pyo
@@ -58,6 +61,9 @@ ${PYSITELIB}/pynicotine/gtkgui/settingswindow.pyo
 ${PYSITELIB}/pynicotine/gtkgui/transferlist.py
 ${PYSITELIB}/pynicotine/gtkgui/transferlist.pyc
 ${PYSITELIB}/pynicotine/gtkgui/transferlist.pyo
+${PYSITELIB}/pynicotine/gtkgui/translux.py
+${PYSITELIB}/pynicotine/gtkgui/translux.pyc
+${PYSITELIB}/pynicotine/gtkgui/translux.pyo
 ${PYSITELIB}/pynicotine/gtkgui/uploads.py
 ${PYSITELIB}/pynicotine/gtkgui/uploads.pyc
 ${PYSITELIB}/pynicotine/gtkgui/uploads.pyo
